# ifavif

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  dllres.rc.cmakein  extractor.c  extractor.h  ifavif.rc  meson_cross.ini.cmakein  spi00in.c  spi00in.h
.github/workflows/: ci.yml
